--- a/final-hw/style.css
+++ b/final-hw/style.css
@@ -18,13 +18,26 @@
     /* max-width: 1280px; */
     margin: 0 auto;
     max-width: 1050px;
-    max-height: 544px;
+    /* max-height: 544px; */
     gap:30px;
     background-color:#2B2B2B;
     display:flex;
     justify-content: space-between;
     padding: 180px 85px 180px 85px;
-    
+}
+@media screen and (max-width: 1100px) {
+    .main__flex-container {
+        display:flex;
+        flex-direction: column;
+    }
+    .container__main2 {
+        display:flex;
+        flex-direction: column;
+    }
+    .flex-container__main2 {
+        display:flex;
+        flex-direction: column;
+    }
 }
 .header__nav-items {
     display:flex;
@@ -33,7 +46,7 @@
     
 }
 .header__logo {
-    margin: 14px 0px 0 50px;
+    margin: 36px 0px 0 50px;
 }
 
 .container__header {
@@ -65,6 +78,9 @@
 .header,
 .main {
     background-color: #2B2B2B;
+}
+.header__nav {
+    margin-top:20px;
 }
 .nav-item-signup {
     max-width:152px;
@@ -106,6 +122,7 @@
     gap:12px;
     background-color: #A259FF;
     position:relative;
+    margin: 49px 0 0px 0;
 }
 .start {
     color:white;
@@ -132,6 +149,7 @@
     font-size:28px;
     line-height: 39.2px;
     color:#ffffff;
+    margin: 30px 65px 0px 0px;
 }
 .sale2 {
     font-family:Work Sans;
@@ -156,7 +174,7 @@
     position:relative;
 }
 .artist::before {
-    content: url(./img/Avatar.png);
+    content: url(./img/animalkid.png);
 }
 .artist-card {
     margin: 50px 0 0 0;
@@ -172,21 +190,73 @@
 .main2 {
     background-color: #2B2B2B;
 }
+.main2__info {
+    margin-bottom: 60px;
+}
 .trending {
     font-family: Work Sans;
     font-weight: 600;
     font-size:38px;
     line-height: 45.6px;
     color:#ffffff;
+    margin:0;
 }
 .container__main2 {
     max-width: 1050px;
-    max-height: 544px;
     gap: 30px;
     background-color: #2B2B2B;
-    padding: 180px 85px 180px 85px;
+    padding: 0 85px 0 85px;
     margin: 0 auto;
 }
+@media screen and (max-width:769px) {
+    .aboutpicture, {
+        width:100%;
+    }
+    .picture {
+        width:100%;
+    }
+}
+@media screen and (max-width: 769px) {
+    .artist-card {
+        max-width:100%;
+    }
+}
+@media screen and (max-width: 769px) {
+    .container__main2 {
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media screen and (max-width: 769px) {
+    .flex-container__header{
+        display:flex;
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 535px) {
+    .header__nav-items {
+        display:flex;
+        flex-direction: column;
+        /* justify-content: center;
+        align-items: center; */
+    }
+}
+@media screen and (max-width: 510px) {
+    .flex-container__sale {
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+@media screen and (max-width: 400px) {
+    .main_infoH1 {
+        font-size:40px;
+    }
+}
+
+
+
 .checkout {
     font-family: Work Sans;
     font-weight: 400;
@@ -226,7 +296,9 @@
     grid-column-start: 5;
     grid-column-end: 6;
 }
-.artist1 {
+.artist1,
+.artist2,
+.artist3 {
     font-family:Work Sans;
     font-weight: 400;
     font-size:16px;
@@ -234,6 +306,97 @@
     color:#ffffff;
 
 }
+.grid-container1 {
+    display:grid;
+    grid-template-columns: repeat(6,55px);
+    grid-template-rows: repeat(8,60px);
+
+}
+.grid-container2,
+.grid-container3 {
+    display:grid;
+    grid-template-columns: repeat(6,55px);
+    grid-template-rows: repeat(8,60px);
+}
+.grib-l {
+    display:grid;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 7;
+    grid-row-end: 8;
+}
+.robot-l {
+    display:grid;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 7;
+    grid-row-end: 8;
+}
+.grib-r {
+    display:grid;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 7;
+    grid-row-end: 8;
+}
+.robot-r {
+    display:grid;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 7;
+    grid-row-end: 8;
+}
+.number2,
+.number3 {
+    display:grid;
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start: 7;
+    grid-row-end: 8;
+}
+.flex-container__main2 {
+    display:flex;
+    justify-content: space-between;
+    gap:20px;
+}
+.artist1::before {
+    content: url(./img/mrfox.png);
+}
+.artist2::before {
+    content: url(./img/mushrom.png);
+}
+.artist3::before {
+    content: url(./img/robots.png);
+}
+
+
+@media screen and (max-width: 1200px) {
+    .container,
+    .main__flex-container,
+    .flex-container__main2,
+    .flex-container__header {
+      max-width: 970px;
+      padding: 0, 15px;
+    }
+  }
+  @media screen and (max-width: 992px) {
+    .container,
+    .main__flex-container,
+    .flex-container__main2,
+    .flex-container__header {
+      max-width: 750px;
+      padding: 0, 15px;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    .container,
+    .main__flex-container,
+    .flex-container__main2,
+    .flex-container__header {
+      max-width: none;
+      padding: 0, 15px;
+    }
+  }
 
 
 
