add homework animation

--- a/hw-animation/reset.css
+++ b/hw-animation/reset.css
@@ -1,4 +1,4 @@
-*,
+/* *,
 *::before,
 *::after {
   padding: 0;
@@ -35,4 +35,4 @@ body {
   color: #000;
   font-weight: 400;
   font-family: Montserrat;
-}
+} */
