--- a/final-hw/style.css
+++ b/final-hw/style.css
@@ -267,7 +267,7 @@
 }
 @media screen and (max-width: 768px) {
     .header__logo {
-        margin: 0 25px 0 0;
+        margin: 0 25px 0 20px;
     }
 }
 @media screen and (max-width: 1080px) {
